add error dto for response
