# internal/dto/error.go
@@ -1,0 +1,5 @@
+package dto
+
+type ErrorResponse struct {
+	Error string `json:"error" example:"error message here"`
+}
